# lark

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  rust-toolchain
components/ast/: Cargo.toml
components/ast/src/: item_id.rs  lib.rs  parser_state.rs  query_definitions.rs  test.rs
components/hir/: Cargo.toml
components/hir/src/: error.rs  fn_body.rs  lib.rs  query_definitions.rs  scope.rs  type_conversion.rs
components/lark-actor/: Cargo.toml  readme.md
components/lark-actor/src/: lib.rs
components/lark-build/: Cargo.toml  readme.md
components/lark-build/src/: build.rs  codegen_rust.rs  lib.rs
components/lark-cli/: Cargo.toml  readme.md
components/lark-cli/src/: build.rs  ide.rs  lib.rs  repl.rs  run.rs
components/lark-codegen2/: Cargo.toml
components/lark-codegen2/src/: codegen_rust.rs  lib.rs
components/lark-collections/: Cargo.toml  readme.md
components/lark-collections/src/: indices.rs  lib.rs  seq.rs  test.rs
components/lark-debug-derive/: Cargo.toml  readme.md
components/lark-debug-derive/src/: lib.rs
components/lark-debug-with/: Cargo.toml  readme.md
components/lark-debug-with/src/: lib.rs
components/lark-entity/: Cargo.toml  readme.md
components/lark-entity/src/: lib.rs
components/lark-error/: Cargo.toml  readme.md
components/lark-error/src/: lib.rs
components/lark-eval/: Cargo.toml  readme.md
components/lark-eval/src/: lib.rs
components/lark-hir/: Cargo.toml  readme.md
components/lark-hir/src/: fn_body.rs  lib.rs  query_definitions.rs  scope.rs  test.rs  type_conversion.rs
components/lark-intern/: Cargo.toml  readme.md
components/lark-intern/src/: lib.rs
components/lark-language-server/: Cargo.toml  readme.md
components/lark-language-server/src/: lib.rs
components/lark-mir/: Cargo.toml
components/lark-mir/src/: fn_bytecode.rs  lib.rs
components/lark-mir2/: Cargo.toml
components/lark-mir2/src/: fn_bytecode.rs  lib.rs
components/lark-parser/: Cargo.toml  readme.md
components/lark-parser/src/: current_file.rs  fn_body.rs  ir.rs  lib.rs  macros.rs  parser.rs  query_definitions.rs  scope.rs  span.rs  syntax.rs  type_conversion.rs
components/lark-parser/src/lexer/: definition.rs  test.rs  token.rs  tools.rs
components/lark-parser/src/macros/: function_declaration.rs  struct_declaration.rs
components/lark-parser/src/syntax/: #field.rs#  delimited.rs  entity.rs  expression.rs  field.rs  fn_body.rs  fn_signature.rs  guard.rs  identifier.rs  list.rs  matched.rs  member.rs  sigil.rs  skip_newline.rs  type_reference.rs  uhir.rs
components/lark-parser/src/syntax/expression/: args.rs  binary.rs  block.rs  expr0_base.rs  expr1_group.rs  expr2_unary.rs  expr34_math.rs  expr5_eq.rs  ident.rs  literal.rs  member_access.rs  scope.rs
components/lark-parser/src/syntax/uhir/: block.rs  entity.rs  pattern.rs  ty.rs
components/lark-pretty-print/: Cargo.toml  readme.md
components/lark-pretty-print/src/: lib.rs
components/lark-query-system/: Cargo.toml  readme.md
components/lark-query-system/src/: lib.rs  ls_ops.rs
components/lark-span/: Cargo.toml  readme.md
components/lark-span/src/: file.rs  identifier.rs  lib.rs  location.rs  span.rs  spanned.rs
components/lark-string/: Cargo.toml  readme.md
components/lark-string/src/: global.rs  lib.rs  text.rs
components/lark-string/src/text/: test.rs
components/lark-test/: Cargo.toml  readme.md
components/lark-test/self_tests/: no_error_no_mode.lark
components/lark-test/src/: harness.rs  lib.rs  main.rs
components/lark-test/src/harness/: options.rs  self_test.rs  test.rs
components/lark-test/src/harness/test/: compilation_test.rs  execution_test.rs  hir_test.rs  ls_test.rs  util.rs
components/lark-ty/: Cargo.toml  readme.md
components/lark-ty/src/: base_inference.rs  base_inferred.rs  base_only.rs  declaration.rs  full_inferred.rs  identity.rs  lib.rs  map_family.rs  pretty_print.rs
components/lark-type-check/: Cargo.toml  readme.md
components/lark-type-check/src/: base_inference.rs  base_only.rs  full_inference.rs  hir_typeck.rs  lib.rs  ops.rs  pretty_print.rs  query_definitions.rs  resolve_to_base_inferred.rs  results.rs  substitute.rs
components/lark-type-check/src/base_inference/: query_definition.rs  resolve_to_base_inferred.rs
components/lark-type-check/src/full_inference/: analysis.rs  apply_perm.rs  base.rs  constraint.rs  kind_inference.rs  perm.rs  query_definition.rs  resolve_to_full_inferred.rs  type_checker.rs
components/lark-type-check/src/full_inference/analysis/: builder.rs  (+3 more)
components/lark-unify/: Cargo.toml  readme.md
components/lark-unify/src/: lib.rs
components/parser/: Cargo.toml
components/parser/src/: ast.rs  errors.rs  grammar.lalrpop  grammar.rs  grammar_helpers.rs  intern.rs  keywords.rs  lexer.rs  lexer_helpers.rs  lib.rs  parser.rs  parser2.rs  pos.rs  prelude.rs  program.rs  query.rs  test_helpers.rs  token.rs  tokenizer.rs
components/parser/src/ast/: debug.rs  test_helpers.rs
components/parser/src/intern/: hash.rs  module_table.rs  string_id.rs
components/parser/src/lexer/: matchers.rs  tools.rs
components/parser/src/parser/: ast.rs  grammar.lalrpop  grammar.rs  keywords.rs  lexer_helpers.rs  pos.rs  program.rs  reporting.rs  test_helpers.rs  token.rs  tokenizer.rs
components/parser/src/parser2/: allow.rs  builtins.rs  entity_tree.rs  lite_parse.rs  macros.rs  quicklex.rs  reader.rs  test_helpers.rs  token.rs  token_macro.rs  token_tree.rs
components/parser/src/pos/: debug.rs  span.rs  spanned.rs  test_helpers.rs
components/parser/src/query/: files.rs  parser_state.rs  reader.rs
components/parser3/: Cargo.toml
components/parser3/src/: lexer.rs  lib.rs  macros.rs  parsed_entity.rs  parser.rs  span.rs  syntax.rs
components/parser3/src/lexer/: definition.rs  test.rs  token.rs  tools.rs
components/parser3/src/macros/: function_declaration.rs  struct_declaration.rs  type_reference.rs
components/parser3/src/syntax/: entity.rs  field.rs  identifier.rs  list.rs  sigil.rs  type_reference.rs
components/query/: Cargo.toml
components/query/src/: lib.rs
(+234 files in other folders)
