[package]
name = "lark"
version = "0.1.0"
authors = [
    "Jonathan Turner <jonathan.d.turner@gmail.com>",
    "Yehuda Katz <wycats@gmail.com>",
    "Niko Matsakis <niko@alum.mit.edu>"
]
edition = '2018'

[profile.dev]
opt-level = 1

[workspace]
members = ["components/lark-parser", "components/lark-span"]

[dependencies]
lark-cli = { path = "components/lark-cli" }

[dev-dependencies]
env_logger = "0.5.13"
languageserver-types = "0.51.0"
lark-debug-derive = { path = "components/lark-debug-derive" }
lark-debug-with = { path = "components/lark-debug-with" }
lark-entity = { path = "components/lark-entity" }
lark-hir = { path = "components/lark-hir" }
lark-intern = { path = "components/lark-intern" }
lark-language-server = { path = "components/lark-language-server" }
lark-query-system = { path = "components/lark-query-system" }
lark-parser = { path = "components/lark-parser" }
lark-span = { path = "components/lark-span" }
lark-string = { path = "components/lark-string" }
lark-test = { path = "components/lark-test" }
lark-test-generate = { path = "components/lark-test-generate" }
lazy_static = "1.2.0"
serde = "1.0"
serde_json = "1.0"
unindent = "0.1.3"
url = "1.7"
