[package]
name = "ast"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
parking_lot = "0.6.4"
salsa = "0.5.0"

debug = { path = "../debug" }
lark-debug-derive = { path = "../lark-debug-derive" }
indices = { path = "../indices" }
intern = { path = "../intern" }
parser = { path = "../parser" }


