[package]
name = "ast"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
codespan = "0.1.3"
log = "0.4.5"
parking_lot = "0.6.4"
salsa = "0.6.2"

debug = { path = "../debug" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-error = { path = "../lark-error" }
lark-entity = { path = "../lark-entity" }
indices = { path = "../indices" }
intern = { path = "../intern" }
parser = { path = "../parser" }


