[package]
name = "ast"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
log = "0.4.5"
parking_lot = "0.6.4"
salsa = "0.8"

debug = { path = "../debug" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-error = { path = "../lark-error" }
lark-entity = { path = "../lark-entity" }
lark-string = { path = "../lark-string" }
lark-seq = { path = "../lark-seq" }
lark-span = { path = "../lark-span" }
indices = { path = "../indices" }
intern = { path = "../intern" }
