[package]
name = "hir"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
parking_lot = "0.6.4"
salsa = "0.5.0"

ast = { path = "../ast" }
indices = { path = "../indices" }
map = { path = "../map" }
parser = { path = "../parser" }
ty = { path = "../ty" }
