[package]
name = "hir"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
parking_lot = "0.6.4"
salsa = "0.6.0"

ast = { path = "../ast" }
debug = { path = "../debug" }
indices = { path = "../indices" }
intern = { path = "../intern" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-entity = { path = "../lark-entity" }
map = { path = "../map" }
parser = { path = "../parser" }
ty = { path = "../ty" }
