[package]
name = "hir"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
log = "0.4.5"
parking_lot = "0.6.4"
salsa = "0.7"

ast = { path = "../ast" }
debug = { path = "../debug" }
indices = { path = "../indices" }
intern = { path = "../intern" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
map = { path = "../map" }
parser = { path = "../parser" }
lark-ty = { path = "../lark-ty" }
