[package]
name = "lark-actor"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "The actor-based system for use in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-actor"

[dependencies]
url = "1.7"
languageserver-types = "0.53"