[package]
name = "lark-build"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "The backend compilation system used in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-build"

[dependencies]
lark-debug-with = { path = "../lark-debug-with" }
lark-hir = { path = "../lark-hir" }
lark-type-check = { path = "../lark-type-check" }
lark-query-system = { path = "../lark-query-system" }
lark-intern = { path = "../lark-intern" }
lark-entity = { path = "../lark-entity" }
lark-parser = { path = "../lark-parser" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
lark-error = { path = "../lark-error" }
tempfile = "2.0"
cc = "1.0"