[package]
name = "lark-build"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "The backend compilation system used in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-build"

[dependencies]
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }
lark-hir = { path = "../lark-hir", version = "0.1.0" }
lark-type-check = { path = "../lark-type-check", version = "0.1.0" }
lark-query-system = { path = "../lark-query-system", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
lark-entity = { path = "../lark-entity", version = "0.1.0" }
lark-parser = { path = "../lark-parser", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-ty = { path = "../lark-ty", version = "0.1.0" }
lark-error = { path = "../lark-error", version = "0.1.0" }
tempfile = "2.0"
cc = "1.0"