[package]
name = "lark-cli"
version = "0.1.0"
authors = [
    "Jonathan Turner <jonathan.d.turner@gmail.com>",
    "Yehuda Katz <wycats@gmail.com>",
    "Niko Matsakis <niko@alum.mit.edu>"
]
edition = "2018"

[dependencies]
languageserver-types = "0.53"
flexi_logger = "0.10.3"
termcolor = "1.0.4"

lark-actor = { path = "../lark-actor" }
lark-build = { path = "../lark-build" }
lark-debug-with = { path = "../lark-debug-with" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-eval = { path = "../lark-eval" }
lark-hir = { path = "../lark-hir" }
lark-intern = { path = "../lark-intern" }
lark-language-server = { path = "../lark-language-server" }
lark-parser = { path = "../lark-parser" }
lark-query-system = { path = "../lark-query-system" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" } 
lark-ty = { path = "../lark-ty" }
lark-type-check = { path = "../lark-type-check" }
lark-unify = { path = "../lark-unify" }
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }