[package]
name = "lark-cli"
version = "0.1.0"
authors = [
    "Jonathan Turner <jonathan.d.turner@gmail.com>",
    "Yehuda Katz <wycats@gmail.com>",
    "Niko Matsakis <niko@alum.mit.edu>"
]
edition = "2018"
description = "The CLI for the Lark compiler, which can initiate a build, IDE interaction, REPL, and evaluation."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-cli"

[dependencies]
languageserver-types = "0.53"
flexi_logger = "0.10.3"
termcolor = "1.0.4"
salsa = "0.9"

lark-actor = { path = "../lark-actor" }
lark-build = { path = "../lark-build" }
lark-debug-with = { path = "../lark-debug-with" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-eval = { path = "../lark-eval" }
lark-hir = { path = "../lark-hir" }
lark-intern = { path = "../lark-intern" }
lark-language-server = { path = "../lark-language-server" }
lark-parser = { path = "../lark-parser" }
lark-query-system = { path = "../lark-query-system" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" } 
lark-type-check = { path = "../lark-type-check" }
lark-unify = { path = "../lark-unify" }
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }