[package]
name = "lark-collections"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Specialized collections used in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-collections"

[dependencies]
rustc-hash = "1.0"
indexmap = "1.0.2"
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }