[package]
name = "lark-debug-derive"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Additional debug printing capability used in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-debug-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"