[package]
name = "lark-debug-with"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Extended debug info that does a deep print of Lark compiler internal structures."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-debug-with"

[dependencies]
indexmap = "1.0.2"