[package]
name = "lark-entity"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-error = { path = "../lark-error" }
lark-intern = { path = "../lark-intern" }
lark-string = { path = "../lark-string" }
lark-span = { path = "../lark-span" }
parking_lot = "0.7"
