[package]
name = "lark-entity"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Representation of an entity in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-entity"

[dependencies]
lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-error = { path = "../lark-error" }
lark-intern = { path = "../lark-intern" }
lark-string = { path = "../lark-string" }
lark-span = { path = "../lark-span" }
parking_lot = "0.7"
