[package]
name = "lark-error"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Representation of an error in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-error"

[dependencies]
lark-debug-derive = { path = "../lark-debug-derive", version = "0.1.0" }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }
lark-collections = { path = "../lark-collections", version = "0.1.0" }
lark-span = { path = "../lark-span", version = "0.1.0" }