[package]
name = "lark-eval"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "An interpreter/evaluator for the Lark language."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-eval"

[dependencies]
lark-hir = { path = "../lark-hir", version = "0.1.0" }
lark-type-check = { path = "../lark-type-check", version = "0.1.0" }
lark-query-system = { path = "../lark-query-system", version = "0.1.0" }
lark-entity = { path = "../lark-entity", version = "0.1.0" }
lark-parser = { path = "../lark-parser", version = "0.1.0" }
lark-span = { path = "../lark-span", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-ty = { path = "../lark-ty", version = "0.1.0" }
lark-error = { path = "../lark-error", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }