[package]
name = "lark-hir"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
log = "0.4.6"
parking_lot = "0.7"
salsa = "0.8"

lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-indices = { path = "../lark-indices" }
lark-intern = { path = "../lark-intern" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
