[package]
name = "lark-hir"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "High-level IR (or HIR) for the Lark language."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-hir"

[dependencies]
log = "0.4.6"
parking_lot = "0.7"
salsa = "0.9"

lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-intern = { path = "../lark-intern" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
