[package]
name = "lark-intern"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Interning capabilities for the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-intern"

[dependencies]
lark-collections = { path = "../lark-collections", version = "0.1.0" }
parking_lot = "0.7"