[package]
name = "lark-language-server"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "The Language Server Protocol (or LSP) implementation for the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-language-server"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
languageserver-types = "0.53"
url = "1.7"
lark-actor = { path = "../lark-actor", version = "0.1.0" }