[package]
name = "lark-parser"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>", "Yehuda Katz <wycats@gmail.com>"]
edition = "2018"
description = "Parser for the Lark language."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-parser"

[dependencies]
derive-new = "0.5.6"
itertools = "0.8"
languageserver-types = "0.53"
lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-error = { path = "../lark-error" }
lark-entity = { path = "../lark-entity" }
lark-hir = { path = "../lark-hir" }
lark-intern = { path = "../lark-intern" }
lark-string = { path = "../lark-string" }
lark-span = { path = "../lark-span" }
lark-ty = { path = "../lark-ty" }
log = "0.4.6"
salsa = "0.9"
parking_lot = "0.7"
unicode-xid = "0.1.0"

[dev-dependencies]
unindent = "0.1.3"
pretty_env_logger = "0.3"

