[package]
name = "lark-parser"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>", "Yehuda Katz <wycats@gmail.com>"]
edition = "2018"
description = "Parser for the Lark language."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-parser"

[dependencies]
derive-new = "0.5.6"
itertools = "0.8"
languageserver-types = "0.54"
lark-collections = { path = "../lark-collections", version = "0.1.0" }
lark-debug-derive = { path = "../lark-debug-derive", version = "0.1.0" }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }
lark-error = { path = "../lark-error", version = "0.1.0" }
lark-entity = { path = "../lark-entity", version = "0.1.0" }
lark-hir = { path = "../lark-hir", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-span = { path = "../lark-span", version = "0.1.0" }
lark-ty = { path = "../lark-ty", version = "0.1.0" }
log = "0.4.6"
salsa = "0.10.0-alpha1"
parking_lot = "0.7"
unicode-xid = "0.1.0"

[dev-dependencies]
unindent = "0.1.3"
pretty_env_logger = "0.3"

