[package]
name = "lark-pretty-print"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"

[dependencies]
lark-entity = { path = "../lark-entity" }
lark-intern = { path = "../lark-intern" }
lark-parser = { path = "../lark-parser" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
