[package]
name = "lark-pretty-print"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "Pretty printer for data structures in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-pretty-print"

[dependencies]
lark-entity = { path = "../lark-entity", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
lark-parser = { path = "../lark-parser", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-ty = { path = "../lark-ty" }
