[package]
name = "lark-query-system"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"

[dependencies]
languageserver-types = "0.51.0"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
lark-collections = { path = "../lark-collections" }
lark-debug-with = { path = "../lark-debug-with" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-hir = { path = "../lark-hir" }
lark-intern = { path = "../lark-intern" }
lark-parser = { path = "../lark-parser" }
lark-pretty-print = { path = "../lark-pretty-print" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" }
lark-task-manager = { path = "../lark-task-manager" }
lark-ty = { path = "../lark-ty" }
lark-type-check = { path = "../lark-type-check" }
log = "0.4.5"
parking_lot = "0.6.4"
salsa = "0.8"
url = "1.7"
