[package]
name = "lark-query-system"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"
description = "A demand-based query system that acts as the core of the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-query-system"

[dependencies]
languageserver-types = "0.53"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
lark-actor = { path = "../lark-actor", version = "0.1.0" }
lark-entity = { path = "../lark-entity", version = "0.1.0" }
lark-error = { path = "../lark-error", version = "0.1.0" }
lark-hir = { path = "../lark-hir", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
lark-parser = { path = "../lark-parser", version = "0.1.0" }
lark-pretty-print = { path = "../lark-pretty-print", version = "0.1.0" }
lark-span = { path = "../lark-span", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-ty = { path = "../lark-ty", version = "0.1.0" }
lark-type-check = { path = "../lark-type-check", version = "0.1.0" }
log = "0.4.6"
parking_lot = "0.7"
salsa = "0.9"
url = "1.7"
