[package]
name = "lark-span"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

[dependencies]
derive-new = "0.5.6"
lark-debug-derive = { path = "../lark-debug-derive" }
lark-string = { path = "../lark-string" }
lark-debug-with = { path = "../lark-debug-with" }
lark-intern = { path = "../lark-intern" }
languageserver-types = "0.53"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
